# fastapi-docs

./: .gitignore  main.py  pyproject.toml  routers.py
00-fundamentos-python-async-entorno/: 01-python-types-intro.py  02-concurrency-and-async-await.py  03-environment-variables.py  04-virtual-environments.py  README.md
01-tutorial-basico-fastapi/: 05-tutorial-user-guide.py  06-first-steps.py  07-path-parameters.py  08-query-parameters.py  09-request-body.py  10-query-parameters-and-string-validations.py  11-path-parameters-and-numeric-validations.py  12-query-parameter-models.py  13-body-multiple-parameters.py  14-body-fields.py  15-body-nested-models.py  16-declare-request-example-data.py  17-extra-data-types.py  README.md
02-parametros-especiales/: 18-cookie-parameters.py  19-header-parameters.py  20-cookie-parameter-models.py  21-header-parameter-models.py  22-response-model-return-type.py  23-extra-models.py  24-response-status-code.py  README.md
03-formularios-ficheros-errores/: 25-form-data.py  26-form-models.py  27-request-files.py  28-request-forms-and-files.py  29-handling-errors.py  30-path-operation-configuration.py  31-json-compatible-encoder.py  32-body-updates.py
04-dependencias-seguridad-middleware/: 33-dependencies.py  34-classes-as-dependencies.py  35-sub-dependencies.py  36-dependencies-in-path-operation-decorators.py  37-global-dependencies.py  38-dependencies-with-yield.py  39-security.py  40-security-first-steps.py  41-get-current-user.py  42-simple-oauth2-with-password-and-bearer.py  43-oauth2-with-password-and-bearer-jwt-tokens.py  45-cors.py  (+1 more)
(+68 files in other folders)
